--- a/html/css/style.css
+++ b/html/css/style.css
@@ -334,7 +334,7 @@ select, input[type="search"]{
     display: flex;
     -webkit-box-pack: end;
         -ms-flex-pack: end;
-            justify-content: end;
+            justify-content: flex-end;
 }
 
 /* MODAL */
